do now know what to commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,15 +27,15 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(CMAKE_MACOSX_RPATH 1)
 endif ()
 
-if(NOT IS_ABSOLUTE ${MARIUS_TORCH_DIR})
-    set(MARIUS_TORCH_DIR "${CMAKE_CURRENT_BINARY_DIR}/${MARIUS_TORCH_DIR}")
+if(NOT IS_ABSOLUTE ${CELERITAS_TORCH_DIR})
+    set(CELERITAS_TORCH_DIR "${CMAKE_CURRENT_BINARY_DIR}/${CELERITAS_TORCH_DIR}")
 endif()
 
-set(Torch_DIR ${MARIUS_TORCH_DIR}/share/cmake/Torch)
+set(Torch_DIR ${CELERITAS_TORCH_DIR}/share/cmake/Torch)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
 if(${USE_CUDA})
-    add_definitions(-DMARIUS_CUDA=${USE_CUDA})
+    add_definitions(-DCELERITAS_CUDA=${USE_CUDA})
     set(CMAKE_CUDA_STANDARD 14)
     set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
     enable_language(CUDA)
@@ -58,21 +58,21 @@ message(STATUS "Torch Version: ${TorchVersion}")
 
 # Add the cmake folder so the FindSphinx module is found
 
-set(MARIUS_CPP_SOURCE ${CMAKE_CURRENT_LIST_DIR}/src/cpp)
-set(CMAKE_MODULE_PATH "${MARIUS_CPP_SOURCE}/cmake" ${CMAKE_MODULE_PATH})
-set(project_INCLUDE_DIR ${MARIUS_CPP_SOURCE}/include)
-set(project_SOURCE_DIR ${MARIUS_CPP_SOURCE}/src)
-set(project_CUDA_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/src/cuda/include)
-set(project_CUDA_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src/cuda/src)
-set(project_CUDA_THIRD_PARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/src/cuda/third_party)
+set(CELERITAS_CPP_SOURCE ${CMAKE_CURRENT_LIST_DIR}/system_design/cpp)
+set(CMAKE_MODULE_PATH "${CELERITAS_CPP_SOURCE}/cmake" ${CMAKE_MODULE_PATH})
+set(project_INCLUDE_DIR ${CELERITAS_CPP_SOURCE}/header)
+set(project_SOURCE_DIR ${CELERITAS_CPP_SOURCE}/cpp)
+set(project_CUDA_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/system_design/Nvidia/include)
+set(project_CUDA_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/system_design/Nvidia/src)
+set(project_CUDA_THIRD_PARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/system_design/Nvidia/modules)
 set(project_TEST_DIR ${CMAKE_CURRENT_LIST_DIR}/test)
 set(project_DOCS_DIR ${CMAKE_CURRENT_LIST_DIR}/docs)
-set(project_BINDINGS_DIR ${MARIUS_CPP_SOURCE}/python_bindings)
-set(project_THIRD_PARTY_DIR ${MARIUS_CPP_SOURCE}/third_party)
+set(project_BINDINGS_DIR ${CELERITAS_CPP_SOURCE}/pybind)
+set(project_THIRD_PARTY_DIR ${CELERITAS_CPP_SOURCE}/modules)
 
 set(project_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR})
-add_definitions(-DMARIUS_BASE_DIRECTORY="${CMAKE_CURRENT_LIST_DIR}")
-add_definitions(-DMARIUS_TEST_DIRECTORY="${project_TEST_DIR}")
+add_definitions(-DCELERITAS_BASE_DIRECTORY="${CMAKE_CURRENT_LIST_DIR}")
+add_definitions(-DCELERITAS_TEST_DIRECTORY="${project_TEST_DIR}")
 
 if (EXISTS ${project_INCLUDE_DIR})
     file(GLOB_RECURSE project_HEADERS ${project_HEADERS} ${project_INCLUDE_DIR}/*.h)
@@ -136,7 +136,7 @@ if(${USE_CUDA})
 endif()
 
 if(${USE_OMP})
-    add_definitions(-DMARIUS_OMP=${USE_OMP})
+    add_definitions(-DCELERITAS_OMP=${USE_OMP})
     if(APPLE)
         if(CMAKE_C_COMPILER_ID MATCHES "Clang")
             set(OpenMP_C "${CMAKE_C_COMPILER}")
@@ -183,14 +183,14 @@ if (EXISTS ${project_TEST_DIR})
     add_subdirectory(${project_TEST_DIR})
 endif ()
 
-add_executable(marius_train ${project_SOURCE_DIR}/marius.cpp)
-add_executable(marius_eval ${project_SOURCE_DIR}/marius.cpp)
-target_link_libraries(marius_train ${PROJECT_NAME})
-target_link_libraries(marius_eval ${PROJECT_NAME})
+add_executable(celeritas_train ${project_SOURCE_DIR}/celeritas.cpp)
+add_executable(celeritas_eval ${project_SOURCE_DIR}/celeritas.cpp)
+target_link_libraries(celeritas_train ${PROJECT_NAME})
+target_link_libraries(celeritas_eval ${PROJECT_NAME})
 
-pybind11_add_module(_pymarius ${project_SOURCES} ${project_BINDINGS})
+pybind11_add_module(_pyceleritas ${project_SOURCES} ${project_BINDINGS})
 
 find_library(TORCH_PYTHON_LIBRARY torch_python PATHS "${TORCH_INSTALL_PREFIX}/lib")
 message(STATUS "TORCH_PYTHON_LIBRARY: ${TORCH_PYTHON_LIBRARY}")
-target_link_libraries(_pymarius PRIVATE ${PROJECT_NAME} ${TORCH_PYTHON_LIBRARY})
-target_include_directories(_pymarius PRIVATE ${project_INCLUDE_DIR})
+target_link_libraries(_pyceleritas PRIVATE ${PROJECT_NAME} ${TORCH_PYTHON_LIBRARY})
+target_include_directories(_pyceleritas PRIVATE ${project_INCLUDE_DIR})
