--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,26 @@ packages =
     celeritas
     celeritas.utils
     celeritas.cmd
+    celeritas.utils.configs
+    celeritas.utils.preprocessing
+    celeritas.utils.preprocessing.dataset
+    celeritas.utils.preprocessing.converter
+    celeritas.utils.preprocessing.converter.dataset_partition
+    celeritas.utils.preprocessing.converter.dataset_read
+    celeritas.utils.preprocessing.converter.dataset_write
 
 package_dir =
     celeritas = system_design/python
     celeritas.utils = system_design/python/utils
     celeritas.cmd = system_design/python/cmd
+    celeritas.utils.configs = system_design/python/utils/configs
+    celeritas.utils.preprocessing = system_design/python/utils/preprocessing
+    celeritas.utils.preprocessing.dataset = system_design/python/utils/preprocessing/dataset
+    celeritas.utils.configs = system_design/python/utils/configs
+    celeritas.utils.converter = system_design/python/utils/preprocessing/converter
+    celeritas.utils.converter.dataset_partition = system_design/python/utils/preprocessing/converter/dataset_partition
+    celeritas.utils.converter.dataset_read = system_design/python/utils/preprocessing/converter/dataset_reader
+    celeritas.utils.converter.dataset_write = = system_design/python/utils/preprocessing/converter/dataset_write
 
 [options.entry_points]
 console_scripts =
